--- a/indexer/pom.xml
+++ b/indexer/pom.xml
@@ -40,6 +40,13 @@
       <artifactId>commons-io</artifactId>
       <version>2.6</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongo-java-driver</artifactId>
+      <version>3.8.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
