--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
 include:
   - project: 'common/gitlab-ci'
     ref: v0.5.0
-    file: '/templates/dockerfile-sonarqube-build.yml'
+    file: '/templates/dockerfile-sonarqube-maven-build.yml'
 
 variables:
   CODE_QUALITY_DISABLED: "true"
+  SONAR_PROJECT_KEY: "kyso-io_kyso-indexer_AYRnkg_MALP5b9a3L7vP"
