--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,9 @@ include:
     ref: v0.5.0
     file: '/templates/dockerfile-sonarqube-maven-build.yml'
 
+sonarqube-maven-check:
+  image: quay.io/quarkus/ubi-quarkus-native-image:22.0-java17o
+
 variables:
   CODE_QUALITY_DISABLED: "true"
   SONAR_PROJECT_KEY: "kyso-io_kyso-indexer_AYRnkg_MALP5b9a3L7vP"
