--- a/indexer/pom.xml
+++ b/indexer/pom.xml
@@ -47,6 +47,12 @@
       <version>3.8.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.vladsch.flexmark</groupId>
+      <artifactId>flexmark-all</artifactId>
+      <version>0.64.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
